Criado page Loading | Adicionado animações css keyframes | Adicionado icone na page Loading :white_check_mark:

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,8 +1,49 @@
+@font-face {
+  font-family: Shlop;
+  src: url(../fonts/shlop\ rg.ttf);
+}
+
+@font-face {
+  font-family: Proppins;
+  src: url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+}
+
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 * {
+  border: none;
+  font-family: 'Poppins', sans-serif;
+  font-size: medium;
+  list-style: none;
   margin: 0;
   padding: 0;
-  border: none;
-  list-style: none;
-  font-size: medium;
   text-decoration: none;
+}
+
+html, body {
+  height: 100%;
+}
+
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
+}
+
+input, button, textarea, select {
+  font: inherit;
+}
+
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+}
+
+#root, #__next {
+  isolation: isolate;
 }
