Criado Component Pagination | Configurado component Pagination | Corrigido erros na page Characters | Atualizado component NavBar

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,7 +4,7 @@
 }
 
 @font-face {
-  font-family: Proppins;
+  font-family: Poppins;
   src: url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 }
 
@@ -46,4 +46,17 @@ p, h1, h2, h3, h4, h5, h6 {
 
 #root, #__next {
   isolation: isolate;
+}
+
+.navBarTitle{
+  font-family: Shlop;
+}
+
+.page-link{
+  color: rgb(25, 135, 84);
+}
+
+.page-link:hover{
+  background-color: rgb(25, 135, 84);
+  color: rgb(245, 245, 245);
 }
