feat(MainScreen.jsx): Adicionando novos alementos de texto na Main Screen ✅

--- a/src/styles/Loading.css
+++ b/src/styles/Loading.css
@@ -86,3 +86,7 @@
   --bounce-offset: -40px;
   animation-duration: 400ms;
 }
+.bounce.four {
+  --bounce-offset: -20px;
+  animation-duration: 200ms;
+}
