:recycle: move assets into assets folder

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Shlop;
-  src: url(../fonts/shlop\ rg.ttf);
+  src: url(../assets/fonts/shlop\ rg.ttf);
 }
 
 @font-face {
@@ -8,7 +8,9 @@
   src: url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
@@ -22,7 +24,8 @@
   text-decoration: none;
 }
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -31,32 +34,47 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-img, picture, video, canvas, svg {
+img,
+picture,
+video,
+canvas,
+svg {
   display: block;
   max-width: 100%;
 }
 
-input, button, textarea, select {
+input,
+button,
+textarea,
+select {
   font: inherit;
 }
 
-p, h1, h2, h3, h4, h5, h6 {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   overflow-wrap: break-word;
 }
 
-#root, #__next {
+#root,
+#__next {
   isolation: isolate;
 }
 
-.navBarTitle, .homePageTitle{
+.navBarTitle,
+.homePageTitle {
   font-family: Shlop;
 }
 
-.page-link{
+.page-link {
   color: rgb(25, 135, 84);
 }
 
-.page-link:hover{
+.page-link:hover {
   background-color: rgb(25, 135, 84);
   color: rgb(245, 245, 245);
 }
